Bug 461440 - Remove unsound assertion; r=ehsan